--- a/client/src/components/BookClub/_BookClub.scss
+++ b/client/src/components/BookClub/_BookClub.scss
@@ -54,3 +54,9 @@
       background-color: s.$bg;
     }
   }
+
+  .bookClubButtons{
+    margin-left: 15px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
