--- a/client/src/components/Profile/_Profile.scss
+++ b/client/src/components/Profile/_Profile.scss
@@ -90,12 +90,48 @@
   color: rgba(s.$text, 0.85);
 }
 
-.north{
+.north {
   display: flex;
   flex-direction: column;
+  button {
+    margin-top: 0.25%;
+    width: 15%;
+    background-color: s.$dark-alt;
+    color: s.$text;
+    border: none;
+    font-size: 15px;
+    padding: 3.5px 7.5px;
+    border-radius: calc(s.$radius/1.5);
+    cursor: pointer;
+    margin-right: 0.5%;
+    transition: 0.25s;
+
+    &:hover {
+      transform: scale(1.05);
+      background-color: s.$primary;
+    }
+
+    &:active {
+      transform: scale(0.95);
+    }
+
+    &:disabled {
+      opacity: (0.35);
+
+      &:hover {
+        transform: scale(1);
+        cursor: default;
+        background-color: s.$dark-alt;
+      }
+
+      &:active {
+        transform: scale(1);
+      }
+    }
+  }
 }
 
-.northLower{
+.northLower {
   display: flex;
   flex-direction: column;
   margin-top: -20px;
@@ -110,6 +146,12 @@
 
   h3 {
     border-bottom: 2px solid grey;
+  }
+
+  &.bookClub{
+    h3{
+      margin-top: 0px;
+    }
   }
 }
 
@@ -143,6 +185,13 @@
   margin-bottom: 2.5%;
 }
 
+.clubUserCard{
+  cursor: pointer;
+  &:hover{
+    color: rgba(s.$text,0.5);
+  }
+}
+
 .profileShelfBookToDisplay {
   .bookCard {
     height: 180.5px;
@@ -170,6 +219,18 @@
   display: flex;
   flex-direction: column;
   padding: 20px;
+  &.bookClubPage {
+    .inputColumn{
+      align-items: flex-start;
+      div {
+        margin-left: 35px;
+      }
+      input[type="text"] {
+        width: 650px;
+      }
+    }
+
+  }
 }
 
 .inputRow {
