--- a/client/src/components/Header/_Header.scss
+++ b/client/src/components/Header/_Header.scss
@@ -127,7 +127,7 @@
   position: absolute;
   text-align: right;
   top: 8.5%;
-  left: 90%;
+  left: 85%;
   background-color: rgba(s.$dark-alt, 0.95);
   z-index: 1;
   animation: dropDown 0.45s ease-in-out forwards;
@@ -142,6 +142,7 @@
   padding-left: 25px;
   font-size: 17px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  width:175px;
 }
 
 @keyframes dropDown {
