--- a/client/src/components/BookClub/_BookClub.scss
+++ b/client/src/components/BookClub/_BookClub.scss
@@ -18,6 +18,7 @@
 }
 
 .bookClubcontainer {
+  width: 100%;
   margin-top: -5%;
   background-color: s.$dark-alt;
   border-radius:0px 0px s.$radius s.$radius;
