--- a/client/src/components/Profile/_Profile.scss
+++ b/client/src/components/Profile/_Profile.scss
@@ -11,6 +11,9 @@
   height: 850px;
   padding: 50px;
   border-radius: s.$radius;
+  &.bookClubContainer {
+    height: fit-content;
+  }
 }
 
 .profileCardTop {
@@ -26,6 +29,9 @@
 
   .reviewContainer {
     height: inherit;
+  }
+  &.clubCardBottom {
+    height: 100%;
   }
 }
 
@@ -148,8 +154,8 @@
     border-bottom: 2px solid grey;
   }
 
-  &.bookClub{
-    h3{
+  &.bookClub {
+    h3 {
       margin-top: 0px;
     }
   }
@@ -177,6 +183,14 @@
   justify-content: center;
   align-items: center;
   padding: 5px;
+  &.bookClubUser {
+    img {
+      height: 90px;
+      width: 90px;
+      border: 2px solid;
+      border-radius: 50px;
+    }
+  }
 }
 
 .profileShelfBookCardTitle {
@@ -185,10 +199,10 @@
   margin-bottom: 2.5%;
 }
 
-.clubUserCard{
+.clubUserCard {
   cursor: pointer;
-  &:hover{
-    color: rgba(s.$text,0.5);
+  &:hover {
+    color: rgba(s.$text, 0.5);
   }
 }
 
@@ -220,7 +234,7 @@
   flex-direction: column;
   padding: 20px;
   &.bookClubPage {
-    .inputColumn{
+    .inputColumn {
       align-items: flex-start;
       div {
         margin-left: 35px;
@@ -229,7 +243,6 @@
         width: 650px;
       }
     }
-
   }
 }
 
