--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1329,6 +1329,11 @@
   padding: 50px;
   border-radius: 5px;
 }
+.profileContainer.bookClubContainer {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
 
 .profileCardTop {
   width: 100%;
@@ -1344,6 +1349,9 @@
 }
 .profileCardBottom .reviewContainer {
   height: inherit;
+}
+.profileCardBottom.clubCardBottom {
+  height: 100%;
 }
 
 .profilecardtitle {
@@ -1470,6 +1478,12 @@
   justify-content: center;
   align-items: center;
   padding: 5px;
+}
+.profileShelfBookCard.bookClubUser img {
+  height: 90px;
+  width: 90px;
+  border: 2px solid;
+  border-radius: 50px;
 }
 
 .profileShelfBookCardTitle {
@@ -1721,6 +1735,7 @@
 }
 
 .bookClubcontainer {
+  width: 100%;
   margin-top: -5%;
   background-color: rgb(65, 65, 65);
   border-radius: 0px 0px 5px 5px;
